syntax = "proto3";

package longgreet;

option go_package = "proto;greetpkg";

message Greeting {
	string first_name = 1;
	string last_name = 2;
}

message LongGreetRequest {
	Greeting greeting = 1;
}

message LongGreetResponse {
	string result = 1;
}

service LongGreetService {
	rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};
}